--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" /js/index.js">
   
   <script type="text/javascript" src="https://github.com/khq1/FutureGreenTech/edit/main/js/index.js"></script>
    
