--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   
 <script src="style.css"></script>
-<script src="js/index.js"></script>                       
+<script src="index.js"></script>                       
      
    
   
