--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   
-<script src="style.css"></script>
-<script src="index.js"></script>                       
+<link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+<script src="..\js\index.js"></script>
+                     
      
    
   
