--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   
 <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
-<script src="..\js\index.js"></script>
+<script src="\js\index.js"></script>
                      
      
    
   
-  <title>UI CSS
+  <title>test
   </title>
  </head>
 <body>
