--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   
-<link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
-<script src="\js\index.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
+<script src="..\js\index.js"></script>
                      
      
    
